# BlockNote-2S

./: README.md
Notebook/: CMakeLists.txt  Note.cpp  Note.h  Text.cpp  Text.h
Notebook/include/: Note.h  NoteWidget.h  Text.h
Notebook/src/: Note.cpp  NoteWidget.cpp  Text.cpp  main.cpp
